traefik/traefik-deployments.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.9
          args:
            - --api.insecure
            - --accesslog
            - --entrypoints.web.Address=:8000
            - --entrypoints.websecure.Address=:4443
            - --api.dashboard=true
            - --providers.docker=true
            - --providers.docker.exposedbydefault=false
            - --providers.docker.network=reverse-proxy
            - --providers.kubernetescrd
            - --certificatesresolvers.myresolver.acme.tlschallenge
            - --certificatesresolvers.myresolver.acme.email=peter890701@gmail.com
            - --certificatesresolvers.myresolver.acme.storage=/acme.json
            # Please note that this is the staging Let's Encrypt server.
            # Once you get things working, you should remove that whole line altogether.
            # - --certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
            - --global.checknewversion
            - --global.sendanonymoususage
            - --ping=true
            - --metrics.prometheus=true
            - --metrics.prometheus.entrypoint=metrics
            - --entryPoints.metrics.address=:8082
          ports:
            - name: web
              containerPort: 8000
            - name: websecure
              containerPort: 4443
            - name: admin
              containerPort: 8080
            - name: metrics
              containerPort: 8082
          volumeMounts:
            - name: dockersock
              mountPath: "/var/run/docker.sock"
            - name: traefikdata
              mountPath: "/acme.json"
          securityContext:
            privileged: true
            runAsUser: 0
      volumes:
        - name: dockersock
          hostPath:
            path: /var/run/docker.sock
        - name: traefikdata
          hostPath:
            path: /data/traefik/certs/acme.json
