traefik/traefik-ingress-route.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.9
          args:
            - --api.insecure
            - --accesslog
            - --global.checknewversion
            - --global.sendanonymoususage
            - --entryPoints.metrics.address=:9100
            - --entrypoints.web.Address=:8000
            - --entrypoints.websecure.Address=:4443
            - --ping=true
            - --metrics.prometheus=true
            - --metrics.prometheus.entrypoint=metrics
            - --providers.kubernetescrd
            - --providers.kubernetesingress
            - --providers.file.filename=dynamic_conf.toml
          ports:
            - name: web
              containerPort: 8000
            - name: websecure
              containerPort: 4443
            - name: admin
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: traefik

spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: web
      port: 8000
      nodePort: 32080
    - protocol: TCP
      name: admin
      port: 8080
      nodePort: 32090
    - protocol: TCP
      name: websecure
      port: 4443
      nodePort: 32443
  selector:
    app: traefik
