traefik/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik

spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: web
      port: 8000
      nodePort: 32080
    - protocol: TCP
      name: admin
      port: 8080
      nodePort: 32090
    - protocol: TCP
      name: websecure
      port: 4443
      nodePort: 32443
    - protocol: TCP
      name: metrics
      port: 8082
      nodePort: 32082
  selector:
    app: traefik
